# hackathon-LLMs

./: .gitignore  pyproject.toml  readme.md  requirements.txt  setup.cfg
examples/basic/computing_embeddings_of_arxiv_abstracts/: computing_embeddings_of_arxiv_abstracts.py
examples/basic/computing_number_of_tokens/: computing_number_of_tokens.py
examples/basic/downloading_papers_from_arxiv/: querying_papers_from_arxiv.py
examples/basic/downloading_papers_from_openreview/: downloading_papers.py
examples/basic/downloading_reviews_from_openreview/: downloading_reviews.py
examples/basic/getting_json_outputs_from_gpt/: getting_json_outputs.py
examples/basic/passing_a_pdf_to_gpt/: passing_a_pdf.py
examples/basic/querying_gpt/: a_basic_query.py
examples/basic/querying_gpt_with_delays/: querying_gpt_with_delays.py
examples/basic/reading_a_pdf/: reading_a_pdf.py
notebooks/: How_to_call_functions_for_knowledge_retrieval.ipynb
src/llms/: __init__.py
src/llms/api/: __init__.py  load_api_key.py  load_api_keys.py
src/llms/api/pricing/: __init__.py  compute_price.py
src/llms/utils/: pdf.py
src/llms/utils/constants/: __init__.py  models_and_prices.py
